syntax = "proto3";
package product;
option go_package = "./internal/pb";

service ProductService {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
  rpc DecreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse) {}
}

// Create

message CreateRequest {
  string name = 1;
  string sku = 2;
  int64 stock = 3;
  int64 price = 4;
}

message CreateResponse {
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}

// FindOne

message FindOneData {
  int64 id = 1;
  string name = 2;
  string sku = 3;
  int64 stock = 4;
  int64 price = 5;
}

message FindOneRequest { 
  int64 id = 1; 
}

message FindOneResponse {
  int64 status = 1;
  string error = 2;
  FindOneData data = 3;
}

// DecreaseStock

message DecreaseStockRequest {
  int64 id = 1;
  int64 order_id = 2;
}

message DecreaseStockResponse {
  int64 status = 1;
  string error = 2;
}
